# serializer version: 1
# name: test_entities[number.bravia_tv_model_color_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bravia_tv_model_color_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Color temperature',
    'platform': 'braviatv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color_temperature',
    'unique_id': 'very_unique_string_color_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[number.bravia_tv_model_color_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BRAVIA TV-Model Color temperature',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.bravia_tv_model_color_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40',
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bravia_tv_model_picture_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Picture brightness',
    'platform': 'braviatv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'brightness',
    'unique_id': 'very_unique_string_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BRAVIA TV-Model Picture brightness',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.bravia_tv_model_picture_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bravia_tv_model_picture_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Picture color',
    'platform': 'braviatv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color',
    'unique_id': 'very_unique_string_color',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BRAVIA TV-Model Picture color',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.bravia_tv_model_picture_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_contrast-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bravia_tv_model_picture_contrast',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Picture contrast',
    'platform': 'braviatv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'contrast',
    'unique_id': 'very_unique_string_contrast',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_contrast-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BRAVIA TV-Model Picture contrast',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.bravia_tv_model_picture_contrast',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_sharpness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bravia_tv_model_picture_sharpness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Picture sharpness',
    'platform': 'braviatv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sharpness',
    'unique_id': 'very_unique_string_sharpness',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[number.bravia_tv_model_picture_sharpness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BRAVIA TV-Model Picture sharpness',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.bravia_tv_model_picture_sharpness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30',
  })
# ---
